[gd_scene load_steps=25 format=3 uid="uid://clr1pqi3mxavn"]

[ext_resource type="Script" path="res://ui/inventory/scripts/inventory.gd" id="1_bnrs2"]
[ext_resource type="Script" path="res://ui/inventory/scripts/held_item_panel.gd" id="3_7swtg"]
[ext_resource type="Script" path="res://ui/inventory/scripts/backpack.gd" id="3_36qjp"]
[ext_resource type="FontFile" uid="uid://bkgdhvj2ggyfo" path="res://assets/fonts/CONSOLA.TTF" id="5_nextx"]
[ext_resource type="LabelSettings" uid="uid://gts2l8irhv00" path="res://assets/fonts/light_blue_console.tres" id="8_jfj1k"]
[ext_resource type="PackedScene" uid="uid://b2340toqvxnfn" path="res://ui/inventory/CharacterInfoTab.tscn" id="9_5c42y"]
[ext_resource type="LabelSettings" uid="uid://cmfsg5d7438bt" path="res://assets/fonts/yellow_console_text.tres" id="9_ympai"]
[ext_resource type="LabelSettings" uid="uid://dp6o68cs1rv5i" path="res://assets/fonts/light_orange_console.tres" id="10_xp1ku"]
[ext_resource type="LabelSettings" uid="uid://b6cf5k4q5kd71" path="res://assets/fonts/dark_blue_console_text.tres" id="11_5v8ib"]
[ext_resource type="Script" path="res://ui/inventory/scripts/battle_inventory.gd" id="12_h7lbo"]
[ext_resource type="Script" path="res://scenes/battle/ui/battle_inventory_close_button.gd" id="12_h7wyd"]
[ext_resource type="Script" path="res://ui/inventory/info_box_container.gd" id="14_uxv63"]
[ext_resource type="AudioStream" uid="uid://bdx12agaryr3k" path="res://assets/sounds/interface/click7.mp3" id="29_qpj5l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7besx"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 2
expand_margin_left = 11.0
expand_margin_top = 5.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_10aoo"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_umvl5"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_top = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qr4wc"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
corner_radius_top_left = 3
corner_radius_top_right = 2
expand_margin_left = 11.0
expand_margin_top = 5.0
expand_margin_right = 8.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojc0m"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_top = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_m78y7"]
font = ExtResource("5_nextx")
font_size = 27
font_color = Color(1, 0.560784, 0.25098, 1)

[sub_resource type="LabelSettings" id="LabelSettings_18och"]
font = ExtResource("5_nextx")
font_size = 27

[sub_resource type="LabelSettings" id="LabelSettings_capk8"]
font = ExtResource("5_nextx")
font_size = 27
font_color = Color(0.666667, 0.788235, 0.247059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nney"]
bg_color = Color(0.122252, 0.122252, 0.122252, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwdoj"]
bg_color = Color(0.0768359, 0.0768358, 0.0768358, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6g6k6"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Inventory" type="CanvasLayer"]
layer = 2
script = ExtResource("1_bnrs2")

[node name="TabContainer" type="TabContainer" parent="."]
visible = false
offset_left = 9.0
offset_top = 21.0
offset_right = 1141.0
offset_bottom = 643.0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
theme_override_constants/outline_size = 0
theme_override_constants/side_margin = 13
theme_override_fonts/font = ExtResource("5_nextx")
theme_override_font_sizes/font_size = 30
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_7besx")
theme_override_styles/tab_disabled = SubResource("StyleBoxFlat_10aoo")
theme_override_styles/panel = SubResource("StyleBoxFlat_umvl5")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_qr4wc")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_7besx")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_7besx")
current_tab = 0
tab_focus_mode = 0

[node name="Personagens" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Personagens"]
layout_mode = 2
theme_override_constants/separation = 47

[node name="PartyContainer" type="VBoxContainer" parent="TabContainer/Personagens/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 22

[node name="HeldItemPanel" type="PanelContainer" parent="TabContainer/Personagens"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_ojc0m")
script = ExtResource("3_7swtg")

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Personagens/HeldItemPanel"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 26

[node name="HeldItemLabel" type="RichTextLabel" parent="TabContainer/Personagens/HeldItemPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/normal_font = ExtResource("5_nextx")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Utilizando \"ITEM TAL DE COISA TAL E BLAU\""
fit_content = true
autowrap_mode = 0

[node name="a" type="Label" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Mochila" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("3_36qjp")
metadata/_tab_index = 2

[node name="InventoryContainer" type="VBoxContainer" parent="TabContainer/Mochila"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 16

[node name="ItemTopSpacer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ClassMochilaLabel" type="Label" parent="TabContainer/Mochila/InventoryContainer/ItemTopSpacer"]
layout_mode = 2
text = " public class"
label_settings = SubResource("LabelSettings_m78y7")

[node name="ClassMochilaLabel2" type="Label" parent="TabContainer/Mochila/InventoryContainer/ItemTopSpacer"]
layout_mode = 2
text = "Mochila"
label_settings = ExtResource("8_jfj1k")

[node name="ClassMochilaLabel3" type="Label" parent="TabContainer/Mochila/InventoryContainer/ItemTopSpacer"]
layout_mode = 2
text = "{"
label_settings = ExtResource("9_ympai")

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Mochila/InventoryContainer"]
custom_minimum_size = Vector2(0, 361.975)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ItemContainer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.97

[node name="ItemLeftSpacer" type="VBoxContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.64

[node name="MochilaText" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer"]
layout_mode = 2

[node name="ListItem" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "  List"
label_settings = ExtResource("8_jfj1k")

[node name="ListItem4" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "<"
label_settings = SubResource("LabelSettings_18och")

[node name="ListItem2" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "Item"
label_settings = ExtResource("8_jfj1k")

[node name="ListItem3" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = ">"
label_settings = SubResource("LabelSettings_18och")

[node name="mochila" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "mochila"
label_settings = SubResource("LabelSettings_18och")

[node name="mochila2" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "="
label_settings = ExtResource("10_xp1ku")

[node name="mochila3" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "["
label_settings = ExtResource("11_5v8ib")

[node name="ItemList" type="HFlowContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer"]
custom_minimum_size = Vector2(730, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="ItemRightSpacer" type="VBoxContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 0.18

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemRightSpacer"]
layout_mode = 2

[node name="Asterisco2" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemRightSpacer/HBoxContainer"]
layout_mode = 2
text = "]"
label_settings = ExtResource("11_5v8ib")

[node name="Asterisco3" type="Label" parent="TabContainer/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemRightSpacer/HBoxContainer"]
layout_mode = 2
text = "}"
label_settings = ExtResource("9_ympai")

[node name="InfoBoxContainer" type="VBoxContainer" parent="TabContainer/Mochila/InventoryContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.2
script = ExtResource("14_uxv63")

[node name="ItemDescriptionContainer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/InfoBoxContainer"]
layout_mode = 2
size_flags_vertical = 2

[node name="DescriptionHSpacer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/InfoBoxContainer/ItemDescriptionContainer"]
custom_minimum_size = Vector2(33.02, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="Asterisco" type="Label" parent="TabContainer/Mochila/InventoryContainer/InfoBoxContainer/ItemDescriptionContainer/DescriptionHSpacer"]
layout_mode = 2
text = " *"
label_settings = SubResource("LabelSettings_18och")

[node name="ItemInfoContainer" type="HBoxContainer" parent="TabContainer/Mochila/InventoryContainer/InfoBoxContainer/ItemDescriptionContainer"]
custom_minimum_size = Vector2(33.02, 0)
layout_mode = 2
size_flags_vertical = 0

[node name="ItemInfoLabel" type="Label" parent="TabContainer/Mochila/InventoryContainer/InfoBoxContainer/ItemDescriptionContainer/ItemInfoContainer"]
custom_minimum_size = Vector2(1081, 0)
layout_mode = 2
label_settings = SubResource("LabelSettings_capk8")
autowrap_mode = 2

[node name="b" type="Label" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Opções" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="c" type="Label" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 5

[node name="PersonagemInfo" parent="TabContainer" instance=ExtResource("9_5c42y")]
layout_mode = 2

[node name="d" type="Label" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 7

[node name="Documentação" type="MarginContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 8

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Documentação"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Documentação/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
theme_override_styles/panel = SubResource("StyleBoxFlat_3nney")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Documentação/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="TabContainer/Documentação/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Variáveis"

[node name="Button2" type="Button" parent="TabContainer/Documentação/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Métodos
"

[node name="ScrollContainer2" type="ScrollContainer" parent="TabContainer/Documentação/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Documentação/HBoxContainer/ScrollContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Documentação/HBoxContainer/ScrollContainer2/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "
Variáveis são espaços na memória reservados para armazenar dados que podem ser usados e manipulados durante a execução de um programa. Cada variável possui um tipo, um nome e um valor. O tipo da variável define o tipo de dado que ela pode armazenar, enquanto o nome é usado para referenciar essa variável no código.   

 [color=blue][b]Variável de classe (estática)[/b][/color]: A variável [color=red][b]contador[/b][/color] é compartilhada por todas as instâncias da classe Exemplo.

    [color=green][b]Variável de instância[/b][/color]: A variável [color=purple][b]nome[/b][/color] pertence a cada objeto criado a partir da classe Exemplo.

    [color=orange][b]Variável local[/b][/color]: A variável [color=darkred][b]idade[/b][/color] existe apenas dentro do método [color=orange][b]metodo[/b][/color]().

    [color=red][b]contador[/b][/color]: É incrementado toda vez que um novo objeto da classe Exemplo é criado.

    [color=purple][b]nome[/b][/color]: Armazena o nome associado a cada objeto.

    [color=darkred][b]idade[/b][/color]: É uma variável local usada temporariamente no método [color=orange][b]metodo[/b][/color]()."
fit_content = true

[node name="PanelContainer" type="PanelContainer" parent="TabContainer/Documentação/HBoxContainer/ScrollContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_nwdoj")

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Documentação/HBoxContainer/ScrollContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_nextx")
theme_override_fonts/bold_font = ExtResource("5_nextx")
bbcode_enabled = true
text = "public class Exemplo {
    // [color=blue][b]Variável de classe (estática)[/b][/color]
    static int [color=red][b]contador[/b][/color] = 0;

    // [color=green][b]Variável de instância[/b][/color]
    String [color=purple][b]nome[/b][/color];

    public Exemplo(String nome) {
        this.[color=purple][b]nome[/b][/color] = nome; // Inicializando a [color=green][b]variável de instância[/b][/color]
        [color=red][b]contador[/b][/color]++;       // Incrementando a [color=blue][b]variável de classe[/b][/color]
    }

    public void metodo() {
        // [color=orange][b]Variável local[/b][/color]
        int [color=darkred][b]idade[/b][/color] = 30;
        System.out.println(\"Nome: \" + [color=purple][b]nome[/b][/color] + \", Idade: \" + [color=darkred][b]idade[/b][/color]);
    }

    public static void main(String[] args) {
        Exemplo obj1 = new Exemplo(\"Alice\");
        Exemplo obj2 = new Exemplo(\"Bob\");

        obj1.[color=orange][b]metodo[/b][/color]();
        obj2.[color=orange][b]metodo[/b][/color]();

        System.out.println(\"Contador: \" + [color=red][b]contador[/b][/color]);
    }"

[node name="BattleInventory" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="BattleInventory"]
z_index = 1
layout_mode = 0
offset_left = 875.0
offset_top = 25.0
offset_right = 908.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6g6k6")
text = "X"
script = ExtResource("12_h7wyd")

[node name="BattleInventoryTabs" type="TabContainer" parent="BattleInventory"]
layout_mode = 0
offset_left = 140.0
offset_top = 15.0
offset_right = 893.0
offset_bottom = 503.0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
theme_override_constants/outline_size = 0
theme_override_constants/side_margin = 13
theme_override_fonts/font = ExtResource("5_nextx")
theme_override_font_sizes/font_size = 30
theme_override_styles/tab_focus = SubResource("StyleBoxFlat_7besx")
theme_override_styles/tab_disabled = SubResource("StyleBoxFlat_10aoo")
theme_override_styles/panel = SubResource("StyleBoxFlat_umvl5")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_qr4wc")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_7besx")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_7besx")
current_tab = 0
tab_focus_mode = 0

[node name="Mochila" type="MarginContainer" parent="BattleInventory/BattleInventoryTabs"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("12_h7lbo")
metadata/_tab_index = 0

[node name="InventoryContainer" type="VBoxContainer" parent="BattleInventory/BattleInventoryTabs/Mochila"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ItemTopSpacer" type="HBoxContainer" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="ClassMochilaLabel" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ItemTopSpacer"]
layout_mode = 2
text = " public class"
label_settings = SubResource("LabelSettings_m78y7")

[node name="ClassMochilaLabel2" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ItemTopSpacer"]
layout_mode = 2
text = "Mochila"
label_settings = ExtResource("8_jfj1k")

[node name="ClassMochilaLabel3" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ItemTopSpacer"]
layout_mode = 2
text = "{"
label_settings = ExtResource("9_ympai")

[node name="ScrollContainer" type="ScrollContainer" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer"]
custom_minimum_size = Vector2(0, 361.975)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ItemContainer" type="HBoxContainer" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.97

[node name="ItemLeftSpacer" type="VBoxContainer" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.64

[node name="MochilaText" type="HBoxContainer" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer"]
layout_mode = 2

[node name="ListItem" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "  List"
label_settings = ExtResource("8_jfj1k")

[node name="ListItem4" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "<"
label_settings = SubResource("LabelSettings_18och")

[node name="ListItem2" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "Item"
label_settings = ExtResource("8_jfj1k")

[node name="ListItem3" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = ">"
label_settings = SubResource("LabelSettings_18och")

[node name="mochila" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "mochila"
label_settings = SubResource("LabelSettings_18och")

[node name="mochila2" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "="
label_settings = ExtResource("10_xp1ku")

[node name="mochila3" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemLeftSpacer/MochilaText"]
layout_mode = 2
text = "["
label_settings = ExtResource("11_5v8ib")

[node name="ItemList" type="HFlowContainer" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0

[node name="ItemRightSpacer" type="VBoxContainer" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer"]
custom_minimum_size = Vector2(0, 48.345)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
size_flags_stretch_ratio = 0.18

[node name="HBoxContainer" type="HBoxContainer" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemRightSpacer"]
layout_mode = 2

[node name="Asterisco2" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemRightSpacer/HBoxContainer"]
layout_mode = 2
text = "]"
label_settings = ExtResource("11_5v8ib")

[node name="Asterisco3" type="Label" parent="BattleInventory/BattleInventoryTabs/Mochila/InventoryContainer/ScrollContainer/ItemContainer/ItemRightSpacer/HBoxContainer"]
layout_mode = 2
text = "}"
label_settings = ExtResource("9_ympai")

[node name="Audio_Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_qpj5l")
